test/black-box/v1/2.exp
[Line 3] Semantic error : Identifier Arvore is already in use.
