test/black-box/v1/2.toc
# Exemplo de objetos em TOC
obj Arvore(int galhos)
  prv int Arvore = galhos
  pub int frutas = 0
